Fix wall overlap

--- a/cirandas/stylesheets/theme.scss
+++ b/cirandas/stylesheets/theme.scss
@@ -71,11 +71,6 @@ body.template-leftbar .box-1 {
   max-width: none;
 }
 
-#profile-activity ul,
-#profile-network ul,
-#profile-wall ul {
-  width: 100%;
-}
 .ui-tabs .ui-tabs-panel {
   padding: 0;
 }
